src/pages/ProductListing/product-listing.css
/*filter aside*/
.mobile-filter {
  display: none;
}
.filter-container {
  flex-basis: var(--size-320);
}
.filter-title,
.filter-price-range {
  align-items: center;
  justify-content: space-between;
}
.filter-price-input {
  width: 100%;
}
/*product cards*/
.card-categories {
  max-width: 140rem;
  margin: 0 auto;
}
.card-container {
  width: var(--size-320);
  border: var(--size-16);
}
.card-action {
  display: flex;
  justify-content: space-between;
  padding: var(--size-8);
  align-items: center;
}
.card-img-top {
  border-top-right-radius: var(--size-16);
  border-top-left-radius: var(--size-16);
}
.card-cost {
  font-size: var(--size-24);
  font-weight: 700;
}
.wishlist-icon {
  position: absolute;
  top: var(--size-8);
  right: var(--size-8);
  color: var(--secondary-color);
}
.product-rating {
  background-color: var(--primary-light-color);
}

@media (max-width: 768px) {
  .filter-container {
    display: none;
  }
  .mobile-filter {
    display: block;
    position: fixed;
    bottom: 0;
    z-index: 5;
    background-color: var(--txt-clr-secondary);
    display: flex;
  }
  .btn.mobile-filter-btn {
    background-color: var(--primary-color);
    color: var(--txt-clr-secondary);
    font-size: var(--size-md);
    margin: 1.6rem auto;
  }
  .filter-mobile-screen {
    display: block;
    position: fixed;
    background-color: #fff;
    z-index: 9;
    width: 100%;
    top: 0;
    overflow: hidden;
    height: 100vh;
  }
}

